// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders 1`] = `
<label
  className="sc-jvZVje ddlKoc"
>
  <input
    className="sc-XgeeE cByRDe"
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="sc-jWQtYj jfbpce"
  >
    <span
      className="sc-ddmIZK jWJpmw"
    >
      <div
        checked={false}
        className="sc-hQJPdd cRTnpM"
      />
    </span>
    <p
      className="sc-hBdhWE iWXcx"
      color="bulma.100"
      size={14}
    >
      I agree to receive bonus & marketing emails.
    </p>
  </div>
</label>
`;

exports[`Checkbox renders Checked 1`] = `
<label
  className="sc-jvZVje ddlKoc"
>
  <input
    checked={true}
    className="sc-XgeeE cByRDe"
    onClick={[Function]}
    readOnly={true}
    type="checkbox"
  />
  <div
    className="sc-jWQtYj jfbpce"
  >
    <span
      className="sc-ddmIZK jWJpmw"
    >
      <div
        checked={true}
        className="sc-hQJPdd fcpnCd"
      />
    </span>
    <p
      className="sc-hBdhWE iWXcx"
      color="bulma.100"
      size={14}
    >
      I agree to receive bonus & marketing emails.
    </p>
  </div>
</label>
`;

exports[`Checkbox renders Disabled 1`] = `
<label
  className="sc-jvZVje ddlKoc"
>
  <input
    className="sc-XgeeE cByRDe"
    disabled={true}
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="sc-jWQtYj jfbpce"
  >
    <span
      className="sc-ddmIZK jWJpmw"
    >
      <div
        checked={false}
        className="sc-hQJPdd cRTnpM"
      />
    </span>
    <p
      className="sc-hBdhWE iWXcx"
      color="bulma.100"
      size={14}
    >
      I agree to receive bonus & marketing emails.
    </p>
  </div>
</label>
`;

exports[`Checkbox renders No label 1`] = `
<label
  className="sc-jvZVje ddlKoc"
>
  <input
    className="sc-XgeeE cByRDe"
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="sc-jWQtYj jfbpce"
  >
    <span
      className="sc-ddmIZK jWJpmw"
    >
      <div
        checked={false}
        className="sc-hQJPdd cRTnpM"
      />
    </span>
  </div>
</label>
`;

exports[`Checkbox renders Reverse direction 1`] = `
<label
  className="sc-jvZVje ddlKoc"
>
  <input
    className="sc-XgeeE cByRDe"
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="sc-jWQtYj jfbpce"
  >
    <p
      className="sc-hBdhWE iWXcx"
      color="bulma.100"
      size={14}
    >
      I agree to receive bonus & marketing emails.
    </p>
    <span
      className="sc-ddmIZK jWJpmw"
    >
      <div
        checked={false}
        className="sc-hQJPdd cRTnpM"
      />
    </span>
  </div>
</label>
`;
